force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_PendingActionOwner__c.field-meta.xml
<CustomField>
    <fullName>uNI_PendingActionOwner__c</fullName>
    <label>Pending Action Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>