force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_PendingConstituencies__c.field-meta.xml
<CustomField>
    <fullName>uNI_PendingConstituencies__c</fullName>
    <label>Pending Constituencies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>