force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_PendingTask__c.field-meta.xml
<CustomField>
    <fullName>uNI_PendingTask__c</fullName>
    <label>Pending Task</label>
    <type>TextArea</type>
</CustomField>