force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_PMPOComments1__c.field-meta.xml
<CustomField>
    <fullName>uNI_PMPOComments1__c</fullName>
    <label>PM/PO Comments</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>