force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_PMPOComments__c.field-meta.xml
<CustomField>
    <fullName>uNI_PMPOComments__c</fullName>
    <label>PM/PO Comments</label>
    <type>TextArea</type>
</CustomField>