force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_PMPOCommentsForPRCReview__c.field-meta.xml
<CustomField>
    <fullName>uNI_PMPOCommentsForPRCReview__c</fullName>
    <label>PM/PO Comments For PRC Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>