force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_PMPOCommentsforStage4__c.field-meta.xml
<CustomField>
    <fullName>uNI_PMPOCommentsforStage4__c</fullName>
    <label>PMPO Comments for Stage 4</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>