force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_PMPOCommentsStage3__c.field-meta.xml
<CustomField>
    <fullName>uNI_PMPOCommentsStage3__c</fullName>
    <label>PM/PO Comments Stage 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>