force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_PMPOMessageforSMT__c.field-meta.xml
<CustomField>
    <fullName>uNI_PMPOMessageforSMT__c</fullName>
    <label>PM/PO Message for SMT</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>