force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_PMPOMessagetoOMT__c.field-meta.xml
<CustomField>
    <fullName>uNI_PMPOMessagetoOMT__c</fullName>
    <description>PM PO Message to OMT For Reprogramming</description>
    <label>PM PO Message to OMT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>