force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_PRCComments__c.field-meta.xml
<CustomField>
    <fullName>uNI_PRCComments__c</fullName>
    <label>PRC Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>