force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_PRCIds__c.field-meta.xml
<CustomField>
    <fullName>uNI_PRCIds__c</fullName>
    <label>PRC Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>