force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_PRCLeadMember__c.field-meta.xml
<CustomField>
    <fullName>uNI_PRCLeadMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PRC Lead Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reprogramming_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>