force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_PRCReviewDate__c.field-meta.xml
<CustomField>
    <fullName>uNI_PRCReviewDate__c</fullName>
    <label>PRC Review Date</label>
    <type>Date</type>
</CustomField>