force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_ProgramManagerUser__c.field-meta.xml
<CustomField>
    <fullName>uNI_ProgramManagerUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Manager User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reprogramming_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>