force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_ProgramOfficerUser__c.field-meta.xml
<CustomField>
    <fullName>uNI_ProgramOfficerUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Officer User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reprogramming_Requests3</relationshipName>
    <type>Lookup</type>
</CustomField>