force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_ProjectName__c.field-meta.xml
<CustomField>
    <fullName>uNI_ProjectName__c</fullName>
    <formula>uNI_Investment__r.uNI_ProjectName__c</formula>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>