force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_ProjectPlanCVIds__c.field-meta.xml
<CustomField>
    <fullName>uNI_ProjectPlanCVIds__c</fullName>
    <description>for reprogramming requests</description>
    <label>Project Plan CV Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>