force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_ProjectStartDate__c.field-meta.xml
<CustomField>
    <fullName>uNI_ProjectStartDate__c</fullName>
    <description>same project start date from the investment (used to calculate the revisedproject year formula)</description>
    <label>Project Start Date</label>
    <type>Date</type>
</CustomField>