force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_ProjectYear__c.field-meta.xml
<CustomField>
    <fullName>uNI_ProjectYear__c</fullName>
    <description>returns the project year for the reporting year so if RR approved in 2025-&gt; reporting year would be 2026.</description>
    <formula>Year(uNI_ApprovedDate__c) + 1</formula>
    <label>Project Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>