force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_ProjectYears__c.field-meta.xml
<CustomField>
    <fullName>uNI_ProjectYears__c</fullName>
    <description>used to display the year columns in the Logframe in the reprogramming request.</description>
    <formula>YEAR(uNI_RevisedEndDate__c) - YEAR(uNI_ProjectStartDate__c)</formula>
    <label>Revised Project Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>