force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_PTCommentsforSMTReviewPackage__c.field-meta.xml
<CustomField>
    <fullName>uNI_PTCommentsforSMTReviewPackage__c</fullName>
    <label>PT Comments for SMT Review Package</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>