force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_PTMemberIdsWhoHaveVoted__c.field-meta.xml
<CustomField>
    <fullName>uNI_PTMemberIdsWhoHaveVoted__c</fullName>
    <label>PT Member Ids Who Have Voted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>