force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_PTMemberswhohaveclearedSMTReview__c.field-meta.xml
<CustomField>
    <fullName>uNI_PTMemberswhohaveclearedSMTReview__c</fullName>
    <label>PT Members who have cleared SMT Review</label>
    <length>255</length>
    <type>Text</type>
</CustomField>