force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_RationalefortheReprogrammingRequest__c.field-meta.xml
<CustomField>
    <fullName>uNI_RationalefortheReprogrammingRequest__c</fullName>
    <label>Rationale for the Reprogramming Request</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>