force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_ReportAndAccountCVIds__c.field-meta.xml
<CustomField>
    <fullName>uNI_ReportAndAccountCVIds__c</fullName>
    <description>for reprogramming requests.</description>
    <label>ReportAndAccount CV Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>