force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_ResubmitStage2Package__c.field-meta.xml
<CustomField>
    <fullName>uNI_ResubmitStage2Package__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resubmit Stage 2 Package</label>
    <type>Checkbox</type>
</CustomField>