force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_RevisedEndDate__c.field-meta.xml
<CustomField>
    <fullName>uNI_RevisedEndDate__c</fullName>
    <description>Revised end date for the Investment.</description>
    <label>Revised End Date</label>
    <type>Date</type>
</CustomField>