force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_SecondaryActionOwner__c.field-meta.xml
<CustomField>
    <fullName>uNI_SecondaryActionOwner__c</fullName>
    <description>Secondary Action Owner for Reprogramming</description>
    <label>Secondary Action Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>