force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_SecondaryCurrentPendingTask__c.field-meta.xml
<CustomField>
    <fullName>uNI_SecondaryCurrentPendingTask__c</fullName>
    <description>Secondary Current Pending Task fo rReprogrammingq</description>
    <label>Secondary Current Pending Task</label>
    <length>255</length>
    <type>Text</type>
</CustomField>