force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_SecondaryWaitingForActionByIds__c.field-meta.xml
<CustomField>
    <fullName>uNI_SecondaryWaitingForActionByIds__c</fullName>
    <label>Secondary Waiting For Action By Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>