force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_SelectedEBIds__c.field-meta.xml
<CustomField>
    <fullName>uNI_SelectedEBIds__c</fullName>
    <label>Selected EB Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>