force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_SeniorLegalOfficerComment__c.field-meta.xml
<CustomField>
    <fullName>uNI_SeniorLegalOfficerComment__c</fullName>
    <label>Senior Legal Officer Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>