force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_SMTMemberIds__c.field-meta.xml
<CustomField>
    <fullName>uNI_SMTMemberIds__c</fullName>
    <label>SMT Member Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>