force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_SMTReviewCommentsBySMT__c.field-meta.xml
<CustomField>
    <fullName>uNI_SMTReviewCommentsBySMT__c</fullName>
    <label>SMT Review Comments by SMT</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>