force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_SMTReviewOutcome__c.field-meta.xml
<CustomField>
    <fullName>uNI_SMTReviewOutcome__c</fullName>
    <label>SMT Review Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>