force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_Stage1FileNames__c.field-meta.xml
<CustomField>
    <fullName>uNI_Stage1FileNames__c</fullName>
    <formula>uNI_FilesSelectedForStage1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage 1 File Names</label>
    <type>Text</type>
</CustomField>