force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_Stage1ProjectPlanCVId__c.field-meta.xml
<CustomField>
    <fullName>uNI_Stage1ProjectPlanCVId__c</fullName>
    <label>Stage 1 Project Plan CV Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>