force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_Stage1TargetEndDate__c.field-meta.xml
<CustomField>
    <fullName>uNI_Stage1TargetEndDate__c</fullName>
    <label>Stage 1 Target End Date</label>
    <type>Date</type>
</CustomField>