force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_Stage2FacesheetCVId__c.field-meta.xml
<CustomField>
    <fullName>uNI_Stage2FacesheetCVId__c</fullName>
    <label>Stage 2 Facesheet CV Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>