force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_Stage2FileNames__c.field-meta.xml
<CustomField>
    <fullName>uNI_Stage2FileNames__c</fullName>
    <formula>SUBSTITUTE( uNI_FilesSelectedForStage2__c , &apos;;&apos;, BR() )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage 2 File Names</label>
    <type>Text</type>
</CustomField>