force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_Stage2LogframeCVId__c.field-meta.xml
<CustomField>
    <fullName>uNI_Stage2LogframeCVId__c</fullName>
    <label>Stage 2 Logframe CV Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>