force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_Stage2TargetEndDate__c.field-meta.xml
<CustomField>
    <fullName>uNI_Stage2TargetEndDate__c</fullName>
    <label>Stage 2 Target End Date</label>
    <type>Date</type>
</CustomField>