force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_Stage3FileNames__c.field-meta.xml
<CustomField>
    <fullName>uNI_Stage3FileNames__c</fullName>
    <label>Stage 3 File Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>