force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_Stage3ProjectPlanCVIds__c.field-meta.xml
<CustomField>
    <fullName>uNI_Stage3ProjectPlanCVIds__c</fullName>
    <label>Stage 3 Project Plan CV Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>