force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_Stage4ProjectPlanCVIds__c.field-meta.xml
<CustomField>
    <fullName>uNI_Stage4ProjectPlanCVIds__c</fullName>
    <label>Stage 4 Project Plan CV Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>