force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_Stage4ReportingAndFrameworkCVID__c.field-meta.xml
<CustomField>
    <fullName>uNI_Stage4ReportingAndFrameworkCVID__c</fullName>
    <label>Stage 4 Reporting And Framework CV ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>