force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_Stage__c.field-meta.xml
<CustomField>
    <fullName>uNI_Stage__c</fullName>
    <description>Stage (GAD) of the reprogramming request</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Stage 1</fullName>
            </value>
            <value>
                <fullName>Stage 2</fullName>
            </value>
            <value>
                <fullName>Stage 3</fullName>
            </value>
            <value>
                <fullName>Stage 4</fullName>
            </value>
            <value>
                <fullName>Stage 5</fullName>
            </value>
            <value>
                <fullName>Agreement ready for signature</fullName>
            </value>
            <value>
                <fullName>Pending ED countersignature</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Grant Agreement Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>