force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_Status__c.field-meta.xml
<CustomField>
    <fullName>uNI_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>PT Accept Material EB Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>