force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_SummaryGrantOutputsActivities__c.field-meta.xml
<CustomField>
    <fullName>uNI_SummaryGrantOutputsActivities__c</fullName>
    <label>Summary of Changes to the Grant’s Output</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>