force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_ThirdActionOwnerName__c.field-meta.xml
<CustomField>
    <fullName>uNI_ThirdActionOwnerName__c</fullName>
    <label>Third Action Owner Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PM/PO</fullName>
            </value>
            <value>
                <fullName>Pre-Grantee</fullName>
            </value>
            <value>
                <fullName>GAM</fullName>
            </value>
            <value>
                <fullName>PRC</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>SMT</fullName>
            </value>
            <value>
                <fullName>ED</fullName>
            </value>
            <value>
                <fullName>EB</fullName>
            </value>
            <value>
                <fullName>Director PD and Legal</fullName>
            </value>
            <value>
                <fullName>Pre-Grantee and PT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>