force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_ThirdCurrentPendingTask__c.field-meta.xml
<CustomField>
    <fullName>uNI_ThirdCurrentPendingTask__c</fullName>
    <label>Third Current Pending Task</label>
    <length>255</length>
    <type>Text</type>
</CustomField>