force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_ThirdWaitingforActionByIds__c.field-meta.xml
<CustomField>
    <fullName>uNI_ThirdWaitingforActionByIds__c</fullName>
    <label>Third Waiting for Action By Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>