force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_TypeOfReprogramming__c.field-meta.xml
<CustomField>
    <fullName>uNI_TypeOfReprogramming__c</fullName>
    <description>Type of reprogramming requested by the implementer</description>
    <label>Type Of Reprogramming</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Material</fullName>
            </value>
            <value>
                <fullName>Material (no EB)</fullName>
            </value>
            <value>
                <fullName>Material (EB)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>