force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_WaitingForActionIdFormula__c.field-meta.xml
<CustomField>
    <fullName>uNI_WaitingForActionIdFormula__c</fullName>
    <formula>IF( Text(uNI_CurrentActionOwner__c)=&apos;PM/PO&apos;,uNI_Investment__r.uNI_ProgramOfficerUserIds__c+&apos;,&apos;+uNI_Investment__r.uNI_ProjectManagerUserIds__c,
IF( Text(uNI_CurrentActionOwner__c)=&apos;Grantee&apos;, uNI_Investment__r.uNI_ProjectTeamUserIds__c,
IF( Text(uNI_CurrentActionOwner__c)=&apos;GAM&apos;, uNI_Investment__r.uNI_GAM__c ,
IF( Text(uNI_CurrentActionOwner__c)=&apos;GAM&apos;, uNI_Investment__r.uNI_GAM__c ,
IF( Text(uNI_CurrentActionOwner__c)=&apos;PRC&apos;, uNI_PRCLeadMember__c +&apos;,&apos;+uNI_PRCIds__c ,
IF( AND(Text(uNI_CurrentActionOwner__c)=&apos;PT&apos;,uNI_HasAllPTClearedSMTPackage__c), uNI_Investment__r.uNI_ProjectTeamUserIds__c,
IF( Text(uNI_CurrentActionOwner__c)=&apos;SMT&apos;, uNI_SMTMemberIds__c ,
uNI_WaitingForActionOwners__c)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Waiting For Action Id Formula</label>
    <type>Text</type>
</CustomField>