force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_WaitingForActionOwners__c.field-meta.xml
<CustomField>
    <fullName>uNI_WaitingForActionOwners__c</fullName>
    <label>Waiting For Action Owners</label>
    <length>255</length>
    <type>Text</type>
</CustomField>