force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNIEDComment__c.field-meta.xml
<CustomField>
    <fullName>uNIEDComment__c</fullName>
    <label>ED Comment</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>