force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNIOMTReviewerIds__c.field-meta.xml
<CustomField>
    <fullName>uNIOMTReviewerIds__c</fullName>
    <description>OMT Reviewer Ids for Reprogramming</description>
    <label>OMT Reviewer Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>