force-app/main/default/objects/uNI_ReprogrammingRequest__c/recordTypes/uNI_MaterialEB.recordType-meta.xml
<RecordType>
    <fullName>uNI_MaterialEB</fullName>
    <active>true</active>
    <description>Record type for the material EB reprogramming requests.</description>
    <label>Material EB</label>
</RecordType>