force-app/main/default/objects/uNI_ReprogrammingRequest__c/recordTypes/uNI_OtherReprogrammingRequest.recordType-meta.xml
<RecordType>
    <fullName>uNI_OtherReprogrammingRequest</fullName>
    <active>true</active>
    <label>Other Reprogramming Request</label>
</RecordType>